--- a/dd.html
+++ b/dd.html
@@ -10,6 +10,9 @@
     <div class="container">
         <div id="left">
             <div class="list" draggable="true"><img src="./drag_drop_icon.png"/> List Item1</div>
+            <div class="list" draggable="true"><img src="./drag_drop_icon.png"/> List Item2</div>
+            <div class="list" draggable="true"><img src="./drag_drop_icon.png"/> List Item3</div>
+            <div class="list" draggable="true"><img src="./drag_drop_icon.png"/> List Item4</div>
         </div>
         <div id="right"></div>
 
