javascript work over

--- a/dd.html
+++ b/dd.html
@@ -9,14 +9,15 @@
 <body>
     <div class="container">
         <div id="left">
-            <div class="list" draggable="true"><img src="./drag_drop_icon.png"/> List Item1</div>
-            <div class="list" draggable="true"><img src="./drag_drop_icon.png"/> List Item2</div>
-            <div class="list" draggable="true"><img src="./drag_drop_icon.png"/> List Item3</div>
-            <div class="list" draggable="true"><img src="./drag_drop_icon.png"/> List Item4</div>
+            <div class="list" draggable="true"><img src="./drag_drop_icon.png"/> LION</div>
+            <div class="list" draggable="true"><img src="./drag_drop_icon.png"/> TIGER</div>
+            <div class="list" draggable="true"><img src="./drag_drop_icon.png"/> DRAGON</div>
+            <div class="list" draggable="true"><img src="./drag_drop_icon.png"/> SNAKE</div>
         </div>
         <div id="right"></div>
 
     </div>
+    <script src="./dd.js"></script>
     
 </body>
 </html>
